<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin">

    <EditText
        android:id="@+id/ssn_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ssn"/>

    <EditText
        android:id="@+id/fist_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:layout_below="@+id/ssn_input"/>

    <EditText
        android:id="@+id/last_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name_input"
        android:layout_below="@+id/fist_name_input"/>

    <EditText
        android:id="@+id/year_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/year_input"
        android:layout_below="@+id/last_name_input"/>

    <EditText
        android:id="@+id/city_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/city_input"
        android:layout_below="@+id/year_input"/>

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_data"
        android:layout_below="@+id/city_input" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_below="@+id/city_input"
        android:layout_toEndOf="@+id/add_button" />

</RelativeLayout>